crates/tui/tests/storybook/snapshots/app_prompt__prompt_centered_picker_with_notification.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.styles_text()
---
dim: 50 8
  2   0   1 fg=Black bg=White
  2   1   7 bg=AnsiValue(237)
  2   8   5 bg=AnsiValue(237) attrs=dim
  2  13  37 bg=AnsiValue(237)
  3   8   6 attrs=dim
  4   8   5 attrs=dim
  6   0  50 fg=AnsiValue(237)
  7   0  10 fg=AnsiValue(244) bg=AnsiValue(234)
  7  10  34 bg=AnsiValue(233)
  7  44   6 fg=AnsiValue(244) bg=AnsiValue(233)
