crates/tui/tests/storybook/snapshots/app_prompt__prompt_extended_reasoning_colors.ultra.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---



  tip ctrl+enter / ctrl+q, steer the current …
──────────────────────── test/test-model ultra ─

────────────────────────────────────────────────
 ○ normal                               1:1 100%
