crates/tui/tests/storybook/snapshots/app_prompt__prompt_history_picker_with_notification.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---


 explain the renderer layering
 open the model picker next
──────────────────────────────────────────────────

──────────────────────────────────────────────────
 ○ normal                                 1:1 100%
