crates/tui/tests/storybook/snapshots/app_prompt__prompt_multiline_with_stash_short_terminal.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---



  ◌ Stashed (ctrl+s to unstash)
──────────────────────────────────────────────────
 three
 four
 five
 six
 seven
──────────────────────────────────────────────────
 ○ normal                                 1:1 100%
