crates/tui/tests/storybook/snapshots/app_prompt__prompt_multiline_with_stash_short_terminal.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.styles_text()
---
dim: 50 12
  3   2  29 fg=AnsiValue(244)
  4   0  50 fg=AnsiValue(237)
  5  49   1 bg=AnsiValue(235)
  6  49   1 bg=AnsiValue(235)
  7  49   1 bg=AnsiValue(243)
  8  49   1 bg=AnsiValue(243)
  9   6   1 fg=Black bg=White
  9  49   1 bg=AnsiValue(243)
 10   0  50 fg=AnsiValue(237)
 11   0  10 fg=AnsiValue(244) bg=AnsiValue(234)
 11  10  32 bg=AnsiValue(233)
 11  42   8 fg=AnsiValue(244) bg=AnsiValue(233)
