crates/tui/tests/storybook/snapshots/app_prompt__prompt_path_completion_on_tab.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
assertion_line: 561
expression: frame.styles_text()
---
dim: 50 8
  3   0  10 bg=AnsiValue(237)
  3  10   9 bg=AnsiValue(237) attrs=dim
  3  19  31 bg=AnsiValue(237)
  4   0  50 fg=AnsiValue(237)
  5   5   1 fg=Black bg=White
  6   0  50 fg=AnsiValue(237)
  7   0  10 fg=AnsiValue(244) bg=AnsiValue(234)
  7  10  32 bg=AnsiValue(233)
  7  42   8 fg=AnsiValue(244) bg=AnsiValue(233)
